# querulus

./: .dockerignore  .gitignore  CLAUDE.md  CLAUDE_PROGRESS.md  Dockerfile  PLAN.md  README.md  pyproject.toml
.github/workflows/: docker-build.yml
config/: README.md
querulus/: __init__.py  compression.py  config.py  database.py  main.py  query_builder.py
tests/: __init__.py  test_health.py  test_lapis_compatibility.py
